automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
     "for number in zero_to_three:\n",
     "    iteration_count += 1\n",
     "    print(\"This is iteration:\", iteration_count)\n",
-    "    print(whatever_we_want)\n",
+    "    print(number)\n",
     "print(\"The for loop is finished now! I am not in the for loop block, which is why I only printed once!\")"
    ]
   },
