--- a/index.ipynb
+++ b/index.ipynb
@@ -181,15 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-21b033cf3202>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-21b033cf3202>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for index in [range(0:8)]:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n",
+      "3\n",
+      "France\n",
+      "4\n",
+      "Brazil\n",
+      "5\n",
+      "Japan\n",
+      "6\n",
+      "Vietnam\n",
+      "7\n",
+      "Israel\n"
      ]
     }
    ],
