--- a/index.ipynb
+++ b/index.ipynb
@@ -181,27 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n"
+      "0 Croatia\n",
+      "1 USA\n",
+      "2 Argentina\n",
+      "3 France\n",
+      "4 Brazil\n",
+      "5 Japan\n",
+      "6 Vietnam\n",
+      "7 Israel\n"
      ]
     }
    ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
-    "    print(index,(countries[index])"
+    "    print(index,countries[index])"
    ]
   },
   {
